objects/ssot__Visitor__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AssigneeId__c</fullName>
        <label>Assignee</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssigneeObject__c</fullName>
        <label>Assignee Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Visitor Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Type__c</fullName>
        <label>Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VisitId__c</fullName>
        <label>Visit</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Visitor_AssigneeId_map_User_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visitor_AssigneeId_map_User_Id_N_1</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>Visitor_AssigneeId_map_User_Id_N_1</relationshipLabel>
        <relationshipName>Visitor_AssigneeId_map_User_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Visitor_VisitId_map_Visit_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visitor_VisitId_map_Visit_Id_N_1</label>
        <referenceTo>ssot__Visit__dlm</referenceTo>
        <relationshipLabel>Visitor_VisitId_map_Visit_Id_N_1</relationshipLabel>
        <relationshipName>Visitor_VisitId_map_Visit_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>